# StreamLabsTestTask

./: CMakeLists.txt  README.md  client.js  configure.py  index.html  main.js  package-lock.json  package.json  renderer.js
scripts/cmake/: parse.cmake
src/: CMakeLists.txt  main.cpp
src/ipc/: CMakeLists.txt
src/ipc/source/: ipc-server.cpp
src/obs_client/: CMakeLists.txt
src/obs_client/src/: cache-manager.hpp  controller.cpp  controller.hpp  global.cpp  input.cpp  input.hpp  isource.cpp  isource.hpp  main.cpp  nodeobs_api.cpp  nodeobs_api.hpp  nodeobs_autoconfig.hpp  shared.hpp  utility.cpp
src/obs_server/: CMakeLists.txt
src/obs_server/src/: callback-manager.cpp  consts.h  main.cpp  nodeobs_api.cpp  nodeobs_api.h  nodeobs_configManager.cpp  nodeobs_service.cpp  nodeobs_service.h  nodeobs_settings.cpp  osn-input.cpp  osn-input.hpp  osn-source.cpp  osn-source.hpp  shared.hpp
